--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 
                 <p class="mbr-text mbr-fonts-style display-7">
                     idk what to say i just slammed this together-<br></p>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="https://mobiri.se"><span class="mobi-mbri mobi-mbri-contact-form mbr-iconfont mbr-iconfont-btn"></span>Lore</a> <a class="btn btn-primary display-4" href="https://mobiri.se"><span class="mobi-mbri mobi-mbri-opened-folder mbr-iconfont mbr-iconfont-btn"></span>Master List</a>  <a class="btn btn-primary display-4" href="https://mobiri.se"><span class="socicon socicon-discord mbr-iconfont mbr-iconfont-btn"></span>Discord</a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="SpeciesSelect.html"><span class="mobi-mbri mobi-mbri-contact-form mbr-iconfont mbr-iconfont-btn"></span>Species Info</a> <a class="btn btn-primary display-4" href="index.html"><span class="mobi-mbri mobi-mbri-opened-folder mbr-iconfont mbr-iconfont-btn"></span>Master List</a>  <a class="btn btn-primary display-4" href="https://discord.gg/mTTmcUJYG8" target="_blank"><span class="socicon socicon-discord mbr-iconfont mbr-iconfont-btn"></span>Discord</a></div>
             </div>
         </div>
     </div>
@@ -92,7 +92,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/i" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Site was <a href="https://mobirise.site/h" style="color:#aaa;">made with</a> Mobirise</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/f" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Make your own site - <a href="https://mobirise.site/v" style="color:#aaa;">More</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
   <input name="animation" type="hidden">
