--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Peakits because yes</strong></h1>
                 
                 <p class="mbr-text mbr-fonts-style display-7">
-                    idk what to say i just slammed this together-<br></p>
+                    idk what to say i just slammed this together- Now with extra care!<br></p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="SpeciesSelect.html"><span class="mobi-mbri mobi-mbri-contact-form mbr-iconfont mbr-iconfont-btn"></span>Species Info</a> <a class="btn btn-primary display-4" href="index.html"><span class="mobi-mbri mobi-mbri-opened-folder mbr-iconfont mbr-iconfont-btn"></span>Master List</a>  <a class="btn btn-primary display-4" href="https://discord.gg/mTTmcUJYG8" target="_blank"><span class="socicon socicon-discord mbr-iconfont mbr-iconfont-btn"></span>Discord</a></div>
             </div>
         </div>
