Engurish fery hart aaaaa, added better sharing embeds

--- a/SpeciesSelect.html
+++ b/SpeciesSelect.html
@@ -5,9 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:image:src" content="assets/images/SpeciesSelect-meta.png">
+  <meta property="og:image" content="assets/images/SpeciesSelect-meta.png">
+  <meta name="twitter:title" content="Species Selection">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/11455152.png" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="On this Page you can see what species live in the world of peakits!">
   
   
   <title>Species Selection</title>
