--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Welcome to the world of Peakits!</strong></h1>
                 
                 <p class="mbr-text mbr-fonts-style display-7">
-                    On this neat little website you will find everything you want to know about Peakits and everything connected to thier world<br></p>
+                    On this neat little website you will find everything you want to know about Peakits and everything connected to their world<br></p>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-4" href="SpeciesSelect.html"><span class="mobi-mbri mobi-mbri-contact-form mbr-iconfont mbr-iconfont-btn"></span>Species Info</a> <a class="btn btn-primary display-4" href="index.html"><span class="mobi-mbri mobi-mbri-opened-folder mbr-iconfont mbr-iconfont-btn"></span>Master List</a>  <a class="btn btn-primary display-4" href="https://discord.gg/mTTmcUJYG8" target="_blank"><span class="socicon socicon-discord mbr-iconfont mbr-iconfont-btn"></span>Discord</a></div>
             </div>
         </div>
